[TESTBUG]: JVMCI test crashes in constantPoolHandle::constantPoolHandle

XMLWordPrintable

    • b93
    • Verified

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x0000000062b288cd, pid=76380, tid=100796
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151009192118.iggy.8136725-b00)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-20151009192118.iggy.8136725-b00, compiled mode, jvmci, compressed oops, g1 gc, windows-amd64)
      # Problematic frame:
      # V [jvm.dll+0x688cd] constantPoolHandle::constantPoolHandle+0x3d
      #

            Assignee:
            Konstantin Shefov
            Reporter:
            Dean Long
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: