8139385: [TESTBUG]: JVMCI test crashes in constantPoolHandle::constantPoolHandle

Reviewed-by: kvn, iignatyev